packages/aidoku_plugin_loader/lib/src/wasm/wasm_bindings_generated.dart


  late final _wasm_module_newPtr =
      _lookup<
        ffi.NativeFunction<ffi.Pointer<wasm_module_t> Function(ffi.Pointer<wasm_store_t>, ffi.Pointer<wasm_byte_vec_t>)>
      >('wasm_module_new');
  late final _wasm_module_new = _wasm_module_newPtr
      .asFunction<ffi.Pointer<wasm_module_t> Function(ffi.Pointer<wasm_store_t>, ffi.Pointer<wasm_byte_vec_t>)>();

  void wasm_module_imports(
    ffi.Pointer<wasm_module_t> arg0,
    ffi.Pointer<wasm_importtype_vec_t> out,
  ) {
    return _wasm_module_imports(
      arg0,
      out,
    );
  }

  late final _wasm_module_importsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<wasm_module_t>, ffi.Pointer<wasm_importtype_vec_t>)>>(
        'wasm_module_imports',
      );
  late final _wasm_module_imports = _wasm_module_importsPtr
      .asFunction<void Function(ffi.Pointer<wasm_module_t>, ffi.Pointer<wasm_importtype_vec_t>)>();

  void wasm_module_exports(
    ffi.Pointer<wasm_module_t> arg0,
    ffi.Pointer<wasm_exporttype_vec_t> out,
  ) {
    return _wasm_module_exports(
      arg0,
      out,
    );
  }

  late final _wasm_module_exportsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<wasm_module_t>, ffi.Pointer<wasm_exporttype_vec_t>)>>(
        'wasm_module_exports',
      );
  late final _wasm_module_exports = _wasm_module_exportsPtr
      .asFunction<void Function(ffi.Pointer<wasm_module_t>, ffi.Pointer<wasm_exporttype_vec_t>)>();

  void wasm_func_delete(
    ffi.Pointer<wasm_func_t> arg0,
  ) {
    return _wasm_func_delete(
      arg0,
    );
  }

  late final _wasm_func_deletePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<wasm_func_t>)>>(
    'wasm_func_delete',
  );
  late final _wasm_func_delete = _wasm_func_deletePtr.asFunction<void Function(ffi.Pointer<wasm_func_t>)>();

  ffi.Pointer<wasm_func_t> wasm_func_new(
    ffi.Pointer<wasm_store_t> arg0,
    ffi.Pointer<wasm_functype_t> arg1,
    wasm_func_callback_t arg2,
  ) {
    return _wasm_func_new(
      arg0,
      arg1,
      arg2,
    );
  }

  late final _wasm_func_newPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<wasm_func_t> Function(
            ffi.Pointer<wasm_store_t>,
            ffi.Pointer<wasm_functype_t>,
            wasm_func_callback_t,
          )
        >
      >('wasm_func_new');
  late final _wasm_func_new = _wasm_func_newPtr
      .asFunction<
        ffi.Pointer<wasm_func_t> Function(ffi.Pointer<wasm_store_t>, ffi.Pointer<wasm_functype_t>, wasm_func_callback_t)
      >();

  ffi.Pointer<wasm_trap_t> wasm_func_call(
    ffi.Pointer<wasm_func_t> arg0,
    ffi.Pointer<wasm_val_vec_t> args,
    ffi.Pointer<wasm_val_vec_t> results,
  ) {
    return _wasm_func_call(
      arg0,
      args,
      results,
    );
  }

  late final _wasm_func_callPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<wasm_trap_t> Function(
            ffi.Pointer<wasm_func_t>,
            ffi.Pointer<wasm_val_vec_t>,
            ffi.Pointer<wasm_val_vec_t>,
          )
        >
      >('wasm_func_call');
  late final _wasm_func_call = _wasm_func_callPtr
      .asFunction<
        ffi.Pointer<wasm_trap_t> Function(
          ffi.Pointer<wasm_func_t>,
          ffi.Pointer<wasm_val_vec_t>,
          ffi.Pointer<wasm_val_vec_t>,
        )
      >();

  void wasm_memory_delete(
    ffi.Pointer<wasm_memory_t> arg0,
  ) {
    return _wasm_memory_delete(
      arg0,
    );
  }

  late final _wasm_memory_deletePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<wasm_memory_t>)>>(
    'wasm_memory_delete',
  );
  late final _wasm_memory_delete = _wasm_memory_deletePtr.asFunction<void Function(ffi.Pointer<wasm_memory_t>)>();

  late final ffi.Pointer<ffi.Size> _MEMORY_PAGE_SIZE = _lookup<ffi.Size>('MEMORY_PAGE_SIZE');

  int get MEMORY_PAGE_SIZE => _MEMORY_PAGE_SIZE.value;

  ffi.Pointer<ffi.Char> wasm_memory_data(
    ffi.Pointer<wasm_memory_t> arg0,
  ) {
    return _wasm_memory_data(
      arg0,
    );
  }

  late final _wasm_memory_dataPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<wasm_memory_t>)>>('wasm_memory_data');
  late final _wasm_memory_data = _wasm_memory_dataPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<wasm_memory_t>)>();

  int wasm_memory_data_size(
    ffi.Pointer<wasm_memory_t> arg0,
  ) {
    return _wasm_memory_data_size(
      arg0,
    );
  }

  late final _wasm_memory_data_sizePtr = _lookup<ffi.NativeFunction<ffi.Size Function(ffi.Pointer<wasm_memory_t>)>>(
    'wasm_memory_data_size',
  );
  late final _wasm_memory_data_size = _wasm_memory_data_sizePtr.asFunction<int Function(ffi.Pointer<wasm_memory_t>)>();

  void wasm_extern_vec_new_empty(
    ffi.Pointer<wasm_extern_vec_t> out,
  ) {
    return _wasm_extern_vec_new_empty(
      out,
    );
  }

  late final _wasm_extern_vec_new_emptyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<wasm_extern_vec_t>)>>('wasm_extern_vec_new_empty');
  late final _wasm_extern_vec_new_empty = _wasm_extern_vec_new_emptyPtr
      .asFunction<void Function(ffi.Pointer<wasm_extern_vec_t>)>();

  void wasm_extern_vec_new(
    ffi.Pointer<wasm_extern_vec_t> out,
    int arg1,
    ffi.Pointer<ffi.Pointer<wasm_extern_t>> arg2,
  ) {
    return _wasm_extern_vec_new(
      out,
      arg1,
      arg2,
    );
  }

  late final _wasm_extern_vec_newPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<wasm_extern_vec_t>, ffi.Size, ffi.Pointer<ffi.Pointer<wasm_extern_t>>)
        >
      >('wasm_extern_vec_new');
  late final _wasm_extern_vec_new = _wasm_extern_vec_newPtr
      .asFunction<void Function(ffi.Pointer<wasm_extern_vec_t>, int, ffi.Pointer<ffi.Pointer<wasm_extern_t>>)>();

  void wasm_extern_vec_delete(
    ffi.Pointer<wasm_extern_vec_t> arg0,
  ) {
    return _wasm_extern_vec_delete(
      arg0,
    );
  }

  late final _wasm_extern_vec_deletePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<wasm_extern_vec_t>)>>('wasm_extern_vec_delete');
  late final _wasm_extern_vec_delete = _wasm_extern_vec_deletePtr
      .asFunction<void Function(ffi.Pointer<wasm_extern_vec_t>)>();

  ffi.Pointer<wasm_extern_t> wasm_func_as_extern(
    ffi.Pointer<wasm_func_t> arg0,
  ) {
    return _wasm_func_as_extern(
      arg0,
    );
  }

  late final _wasm_func_as_externPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wasm_extern_t> Function(ffi.Pointer<wasm_func_t>)>>('wasm_func_as_extern');
  late final _wasm_func_as_extern = _wasm_func_as_externPtr
      .asFunction<ffi.Pointer<wasm_extern_t> Function(ffi.Pointer<wasm_func_t>)>();

  ffi.Pointer<wasm_func_t> wasm_extern_as_func(
    ffi.Pointer<wasm_extern_t> arg0,
  ) {
    return _wasm_extern_as_func(
      arg0,
    );
  }

  late final _wasm_extern_as_funcPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wasm_func_t> Function(ffi.Pointer<wasm_extern_t>)>>('wasm_extern_as_func');
  late final _wasm_extern_as_func = _wasm_extern_as_funcPtr
      .asFunction<ffi.Pointer<wasm_func_t> Function(ffi.Pointer<wasm_extern_t>)>();

  ffi.Pointer<wasm_memory_t> wasm_extern_as_memory(
    ffi.Pointer<wasm_extern_t> arg0,
  ) {
    return _wasm_extern_as_memory(
      arg0,
    );
  }

  late final _wasm_extern_as_memoryPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wasm_memory_t> Function(ffi.Pointer<wasm_extern_t>)>>(
        'wasm_extern_as_memory',
      );
  late final _wasm_extern_as_memory = _wasm_extern_as_memoryPtr
      .asFunction<ffi.Pointer<wasm_memory_t> Function(ffi.Pointer<wasm_extern_t>)>();

  void wasm_instance_delete(
    ffi.Pointer<wasm_instance_t> arg0,
  ) {
    return _wasm_instance_delete(
      arg0,
    );
  }

  late final _wasm_instance_deletePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<wasm_instance_t>)>>(
    'wasm_instance_delete',
  );
  late final _wasm_instance_delete = _wasm_instance_deletePtr.asFunction<void Function(ffi.Pointer<wasm_instance_t>)>();

  ffi.Pointer<wasm_instance_t> wasm_instance_new(
    ffi.Pointer<wasm_store_t> arg0,
    ffi.Pointer<wasm_module_t> arg1,
    ffi.Pointer<wasm_extern_vec_t> imports,
    ffi.Pointer<ffi.Pointer<wasm_trap_t>> arg3,
  ) {
    return _wasm_instance_new(
      arg0,
      arg1,
      imports,
      arg3,
    );
  }

  late final _wasm_instance_newPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<wasm_instance_t> Function(
            ffi.Pointer<wasm_store_t>,
            ffi.Pointer<wasm_module_t>,
            ffi.Pointer<wasm_extern_vec_t>,
            ffi.Pointer<ffi.Pointer<wasm_trap_t>>,
          )
        >
      >('wasm_instance_new');
  late final _wasm_instance_new = _wasm_instance_newPtr
      .asFunction<
        ffi.Pointer<wasm_instance_t> Function(
          ffi.Pointer<wasm_store_t>,
          ffi.Pointer<wasm_module_t>,
          ffi.Pointer<wasm_extern_vec_t>,
          ffi.Pointer<ffi.Pointer<wasm_trap_t>>,
        )
      >();

  void wasm_instance_exports(
    ffi.Pointer<wasm_instance_t> arg0,
    ffi.Pointer<wasm_extern_vec_t> out,
  ) {
    return _wasm_instance_exports(
      arg0,
      out,
    );
  }

  late final _wasm_instance_exportsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<wasm_instance_t>, ffi.Pointer<wasm_extern_vec_t>)>>(
        'wasm_instance_exports',
      );
  late final _wasm_instance_exports = _wasm_instance_exportsPtr
      .asFunction<void Function(ffi.Pointer<wasm_instance_t>, ffi.Pointer<wasm_extern_vec_t>)>();
}

final class wasm_byte_vec_t extends ffi.Struct {
  @ffi.Size()
  external int size;

  external ffi.Pointer<ffi.Char> data;
}

final class wasm_engine_t extends ffi.Opaque {}

final class wasm_store_t extends ffi.Opaque {}

enum wasm_mutability_enum {
  WASM_CONST(0),
  WASM_VAR(1)
  ;

  final int value;
  const wasm_mutability_enum(this.value);

  static wasm_mutability_enum fromValue(int value) => switch (value) {
    0 => WASM_CONST,
    1 => WASM_VAR,
    _ => throw ArgumentError('Unknown value for wasm_mutability_enum: $value'),
  };
}

enum wasm_valkind_enum {
  WASM_I32(0),
  WASM_I64(1),
  WASM_F32(2),
  WASM_F64(3),
  WASM_EXTERNREF(128),
  WASM_FUNCREF(129)
  ;

  final int value;
  const wasm_valkind_enum(this.value);

  static wasm_valkind_enum fromValue(int value) => switch (value) {
    0 => WASM_I32,
    1 => WASM_I64,
    2 => WASM_F32,
    3 => WASM_F64,
    128 => WASM_EXTERNREF,
    129 => WASM_FUNCREF,
    _ => throw ArgumentError('Unknown value for wasm_valkind_enum: $value'),
  };
}

final class wasm_functype_t extends ffi.Opaque {}

final class wasm_externtype_t extends ffi.Opaque {}

enum wasm_externkind_enum {
  WASM_EXTERN_FUNC(0),
  WASM_EXTERN_GLOBAL(1),
  WASM_EXTERN_TABLE(2),
  WASM_EXTERN_MEMORY(3)
  ;

  final int value;
  const wasm_externkind_enum(this.value);

  static wasm_externkind_enum fromValue(int value) => switch (value) {
    0 => WASM_EXTERN_FUNC,
    1 => WASM_EXTERN_GLOBAL,
    2 => WASM_EXTERN_TABLE,
    3 => WASM_EXTERN_MEMORY,
    _ => throw ArgumentError('Unknown value for wasm_externkind_enum: $value'),
  };
}

final class wasm_importtype_t extends ffi.Opaque {}

final class wasm_importtype_vec_t extends ffi.Struct {
  @ffi.Size()
  external int size;

  external ffi.Pointer<ffi.Pointer<wasm_importtype_t>> data;
}

final class wasm_exporttype_t extends ffi.Opaque {}

final class wasm_exporttype_vec_t extends ffi.Struct {
  @ffi.Size()
  external int size;

  external ffi.Pointer<ffi.Pointer<wasm_exporttype_t>> data;
}

/// ////////////////////////////////////////////////////////////////////////////
final class wasm_ref_t extends ffi.Opaque {}

final class UnnamedUnion extends ffi.Union {
  @ffi.Int32()
  external int i32;

  @ffi.Int64()
  external int i64;

  @ffi.Float()
  external double f32;

  @ffi.Double()
  external double f64;

  external ffi.Pointer<wasm_ref_t> ref;
}

final class wasm_val_t extends ffi.Struct {
  @ffi.Uint8()
  external int kind;

  external UnnamedUnion of;
}
